--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,6 @@ header {
 	justify-content: space-between;
 	align-items: center;
 	background-color: white;
-	position: sticky;
 	top: 0;
 }
 nav {
@@ -156,13 +155,17 @@ nav ul li a {
     margin-bottom: 20px;
 }
 
+.Description h1 {
+    color: #452f73;
+}
+
 .Description h2 {
-    color: #2C3E50;
+    color: #452f73;
     margin-bottom: 10px;
 }
 
 .Description h3 {
-    color: #2C3E50;
+    color: #452f73;
     margin-top: 20px;
 }
 
@@ -210,7 +213,16 @@ nav ul li a {
 .cv-button:hover {
     background-color: #452f73;
 }
+.YoutubeVideo {
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+}
 
+.YoutubeVideo iframe {
+    aspect-ratio: 19/9;
+    
+}
 
 footer {
 	margin-top: 5%;
