--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400&family=Oswald:wght@300&display=swap');
 
+
 body {
 	font-family: 'Noto Sans JP', sans-serif;
 	padding: 0 2%;
 	margin: 0;
 }
 
-header {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	align-items: center;
-	background-color: white;
-	top: 0;
-}
+
 nav {
 	display: flex;
 	flex-wrap: wrap;
@@ -206,6 +200,7 @@ nav ul li a {
     font-size: 16px;
     border: none;
     border-radius: 5px;
+	text-decoration: none;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
@@ -213,6 +208,7 @@ nav ul li a {
 .cv-button:hover {
     background-color: #452f73;
 }
+
 .YoutubeVideo {
     display: flex;
     justify-content: center; 
