--- a/styles.css
+++ b/styles.css
@@ -244,6 +244,10 @@ footer .colonne p:hover {
 h1, h2, h3, h4, h5, h6 {
     color: #554a91;
 }
+footer h3 {
+    color: #fff;
+}
+
 li{
 	text-decoration: #554a91;
 }
